<resources>
    <string name="version_name">v-0.0.1</string>
    <string name="dev_version_name">dev-0.0.1</string>
    <string name="pre_version_name">pre-0.0.1</string>
    <string name="common_unknown_error">An unknown error has occurred</string>
    <string name="loading_popup_default_message">Loading</string>
    <string name="success_popup_default_message">Success!</string>
    <string name="app_google_map_api">GOOGLE_MAP_API</string>
    <string name="preference_file_key">com.oacikel.baseapp_preferences</string>
    <string name="loading_popup_default_header">Please Wait</string>
    <string name="error_popup_default_header">Warning!</string>
    <string name="common_ok">OK</string>
    <string name="success_popup_default_header">Success!</string>
    <string name="permission_location">Your location permission is needed to continue</string>
    <string name="button_location">Get Weather For My Location</string>
    <string name="main_fragment_temperature_title">Temperature:</string>
    <string name="main_fragment_date_title">Date:</string>
    <string name="main_fragment_more_details">More details</string>
    <string name="main_fragment_less_details">Hide details</string>
    <string name="main_fragment_status">Status:</string>
    <string name="main_fragment_save_weather">Save Weather</string>
    <string name="main_fragment_humidity">Humidity:</string>
    <string name="main_fragment_humidity_value">%s %%</string>
    <string name="main_fragment_pressure">Pressure:</string>
    <string name="main_fragment_pressure_value">%s hPa</string>
    <string name="main_fragment_location">Location:</string>
    <string name="bottom_navigation_history">Saved Weather</string>
    <string name="bottom_navigation_city">Search Cities</string>
    <string name="bottom_navigation_current_weather">Current Weather</string>
    <string name="fragment_saved_weathers_search_hint">Search Saved Data</string>
    <string name="fragment_saved_weather_empty_list_description">Looks like you don\'t have any weather event saved...</string>
    <string name="fragment_saved_weather_go_back">Go back</string>
    <string name="fragment_search_city_search_hint">Enter a city name</string>
    <string name="button_city">How\'s the Weather Up There?</string>
</resources>