<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.app.Activity" />

        <variable
            name="activity"
            type="com.oacikel.baseapp.MainActivity" />

        <import type="androidx.navigation.Navigation" />

        <import type="com.oacikel.baseapp.R" />

        <variable
            name="fragment"
            type="androidx.fragment.app.Fragment" />

        <variable
            name="viewModel"
            type="com.oacikel.baseapp.viewModel.SavedWeatherViewModel" />

        <variable
            name="weather"
            type="com.oacikel.baseapp.db.entity.WeatherEntity" />

        <variable
            name="adapter"
            type="com.oacikel.baseapp.binding.listAdapters.WeatherAdapter" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:loadingManager="@{fragment}"
        app:loadingStatus="@{viewModel}"
        app:successManager="@{fragment}"
        app:successStatus="@{viewModel}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutWeatherList"
            visibleGone="@{adapter.itemCount!=0}"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/textInputLayoutSearchSavedWeathers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_search"
                android:hint="@string/fragment_saved_weathers_search_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSavedWeathers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSearchSavedWeathers" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutEmptyList"
            adapter="@{adapter}"
            listView="@{constraintLayoutWeatherList}"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewEmptyList"
                style="@style/mediumTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:text="@string/fragment_saved_weather_empty_list_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonGoBack"
                style="@style/mainButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_saved_weather_go_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEmptyList" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>